# usefulpy

./: .coverage  .gitignore  CONTRIBUTING.md  IDLE.py  README.md  To_Do.md  __init__.py  decorators.py  encoding.py  formatting.py  index.md  mathematics.py  neuralnet.py  pyproject.toml  quickthreads.py  requirements_dev.txt  setup.cfg  setup.py  useful.py  validation.py
.github/ISSUE_TEMPLATE/: bug_report.md
IDE/: __init__.py  namespace_management.py  partitions.py  run_code.py  usefulpy_IDE.py  usefulpy_syntax.py
_examples/: Graphing.py  Langton'sAnt.py  msimplecam.py
data/: __init__.py  stats.py  structures.py
dictionary/: b.txt  k.txt  y.txt
dictionary/dictdata/: a.txt  c.txt  d.txt  e.txt  f.txt  g.txt  h.txt  i.txt  j.txt  l.txt  m.txt  n.txt  o.txt  p.txt  q.txt  r.txt  s.txt  t.txt  u.txt  v.txt  w.txt  x.txt  z.txt
future/: decorators.py  mathfunc.py  mathfuncs.py  mathfuncs1_2_testfunczip.py  mathfuncs2_0.py  recursionLogging.py  validation.py
gui/: To_Do.md  __init__.py  py3d.py
gui/py3d/: Cam.py  Space.py  To_Do.md  __init__.py  shapes.py  simple_camera.py  tools3d.py
mathematics/: Conversions.json  PrimeComposite.py  To_Do.md  __init__.py  algebraicsolver.py  basenum.py  constants.py  eq.py  interval.py  intervals.py  nmath.py  quaternion.py  triangles.py  vector.py
src/usefulpy/: __init__.py  __main__.py  decorators.py  formatting.py  validation.py
tests/: __init__.py  test_formatting.py  test_mathematics.py  test_usefulpy.py  test_validation.py
usefulpy/: TODO.md  __init__.py  decorators.py  encoding.py  formatting.py  validation.py
(+50 files in other folders)
