[metadata]
name = usefulpython
description = tools for a cleaner πthon experience
author = Augustin Garcia
license = GNU AFFERO GENERAL PUBLIC LICENSE
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = 
    usefulpy
package_dir = src
zip_safe = false

[options.extra_require]
testing = 
    flake8==3.9.2
    tox==3.24.3
    pytest==6.2.5
    pytest-cov==2.12.1
    mypy==0.910

[options.package_data]
usefulpy = py.typed

[flake8]
max-line-length = 160
