[metadata]
name = usefulpython
description = tools for a cleaner πthon experience
version = 0.2.1
author = Augustin Garcia
license = GNU AFFERO GENERAL PUBLIC LICENSE
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = 
    usefulpy
python_requires = >=3.6
package_dir = 
    =src
zip_safe = false

[options.extras_require]
testing = 
    flake8==3.9.2
    pytest==6.2.5
    pytest-cov==2.12.1
    mypy==0.910

[options.package_data]
usefulpy = py.typed

[flake8]
max-line-length = 160
ignore = 
    F401
    F403
    E226
    E123
    E731
per-file-ignores =
    # imported but unused
    src\usefulpy\IDE\namespace_management.py: E402
exclude =
    src/usefulpy/gui